--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2 style="text-align:center">Lightbox</h2>
 
 <div class="row">
-  <!-- <div class="column">
+  <div class="column">
     <img src="images/img_nature.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
@@ -24,7 +24,7 @@
   </div>
   <div class="column">
     <img src="images/img_lights.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-  </div> -->
+  </div>
   
 </div>
 
@@ -80,11 +80,11 @@
 <script src = "scripts.js">
 </script>
 
-	<script>
+	<!-- <script>
 	$(document).ready(loadImages());
 	createImages();
 	
-	</script>
+	</script> -->
     
 </body>
 </html>
