--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 	<!-- main slideshow pop up -->
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="images/img_nature.jpg" style="width:100%">
+      <img src="images/img_nature.jpg" style="width:60%">
+	  <div class = "textDescription">Image Text Here</div>
     </div>
 
     <div class="mySlides">
