--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h2 style="text-align:center">Lightbox</h2>
 
-<!-- <div class="row">
+<div class="row">
   <div class="column">
     <img src="images/img_nature.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
@@ -24,7 +24,7 @@
   </div>
   <div class="column">
     <img src="images/img_lights.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-  </div> -->
+  </div>
   
 </div>
 
